@@ -1,0 +1,22 @@
+{% macro t(key) %}{{ {
+  "language": "hr",
+  "clipboard.copy": "Kopirajte u međuspremnik",
+  "clipboard.copied": "Kopirano u međuspremnik",
+  "edit.link.title": "Uredi stranicu",
+  "footer.previous": "Prethodno",
+  "footer.next": "Sljedeće",
+  "meta.comments": "Komentari",
+  "meta.source": "Izvor",
+  "search.language": "",
+  "search.pipeline.stopwords": false,
+  "search.pipeline.trimmer": false,
+  "search.placeholder": "Pretraživanje",
+  "search.result.placeholder": "Unesite pojam pretraživanja",
+  "search.result.none": "Ništa nije pronađeno",
+  "search.result.one": "1 rezultat pretraživanja",
+  "search.result.other": "# rezultata pretraživanja",
+  "search.tokenizer": "[\s\-]+",
+  "skip.link.title": "Preskočite na sadržaj",
+  "source.link.title": "Idite u repozitorij",
+  "toc.title": "Sadržaj"
+}[key] }}{% endmacro %}
